# ergocub_navigation

./: .gitignore  CMakeLists.txt  README.md  ergocub_local_human_avoidance_controller.xml  package.xml
.github/workflows/: docker-build.yml
config/: cyclonedds.xml
config/behavior_trees/: expanded_BT.xml  navigate_to_pose_w_replanning_and_recovery_decorator.xml  navigate_to_pose_w_replanning_and_recovery_decorator_sim.xml  navigate_to_pose_w_replanning_and_recovery_no_decorator_sim.xml
config/maps/: cris_new_area_fixed_keepout_mask.yaml  docker_sim_v1_map.bt  docker_sim_v1_map.pcd  docker_sim_v1_map.pgm  docker_sim_v1_map.yaml  empty_map.yaml  empty_map_big.yaml  floor0_ergoCub_modded.pgm  floor0_ergoCub_modded.yaml  floor0_ergoCub_modded_keepout_full.yaml  floor0_ergoCub_modded_keepout_min.pgm  floor0_ergoCub_modded_keepout_min.yaml  floor1_ergoCub_1raw.pgm  floor1_ergoCub_1raw.yaml  floor1_ergoCub_2.pgm  floor1_ergoCub_2.yaml  keepout_fake_corridor.yaml  kitchen_cleaned.yaml  kitchen_cleaned_modded.yaml  map_1753886395.pgm  map_1753886395.yaml  map_1753886775.pgm  map_1753886775.yaml  map_1753886862.pgm  map_1753886862.yaml  robot_arena_ecub.pgm  robot_arena_ecub.yaml  robot_arena_ecub_modded.yaml  robot_arena_keepout_zones.yaml
config/param/: chest_projection_params.yaml  depth_filter.yaml  ekf.yaml  ergoCub_amcl.yaml  ergoCub_amcl_2.yaml  ergoCub_amcl_nav2.yaml  ergoCub_amcl_sim.yaml  ergoCub_nav2.yaml  ergoCub_nav2_human_avoidance.yaml  ergoCub_nav2_odom_only.yaml  ergoCub_nav2_sim.yaml  ergoCub_nav2_simulation.yaml  ergoCub_nav2_slam.yaml  ergoCub_nav2_vicon.yaml  human_pose_goal_generator.yaml  imu_filter.yaml  keepout_zones.yaml  neck_controller.yaml  odom.yaml  path_converter.yaml  phase_detector.yaml  plane_detector.yaml  scan.yaml  stop_action_node.yaml
config/param/ekf/: ekf.yaml
config/param/simulation/: ergoCub_amcl_sim.yaml  ergoCub_nav2_human_avoidance_sim.yaml  ergoCub_nav2_sim.yaml  scan.yaml
config/rviz/: nav2.rviz
config/yarp/: depth_compressed_ros2.xml  ergocub_wbd_ros2.xml  head_imu_ros2.xml  lidar_compressed_ros2.xml  sensors.xml  sensors_ros2_echo.xml  torso_imu_ros2.xml  waist_imu_ros2.xml
docker/: Dockerfile  README.md  build_docker.sh  run.sh
docker/worlds/: SmallWarehouseScen3.world  SmallWarehouseScen3_pedestrian.world  actor_collisions.world
include/BaseProjector/: BaseProjector.hpp
include/FootstepsViewer/: FootstepsViewerRos.hpp  FootstepsViewerYarp.hpp
include/GoalGenerator/: GoalGenerator.hpp
include/HumanPoseGoalGenerator/: CommunicationWrapper.hpp  GoalGenerator.hpp  HumanPoseGoalGenerator.hpp  NodeRos.hpp
include/LocalHumanAvoidance/: LocalHumanAvoidance.hpp
include/OdomNode/: OdomNode.hpp
include/PathConverter/: PathConverter.hpp  PathConverter_v2.hpp
include/PhaseDetector/: MotorControl.hpp  PhaseDetector.hpp
include/PlaneDetector/: PlaneDetector.hpp
include/PointcloudFilter/: PointcloudFilter.hpp
include/ScanFilter/: ScanFilter.hpp
include/StopActionNode/: CommunicationWrapper.hpp  StopActionNode.hpp
include/odom/: odom_node.hpp
interfaces/: CMakeLists.txt  ControlInterface.thrift
launch/: ekf.launch.py  ergoCub_rviz.launch.py  footprints_viewer.launch.py  human_pose_goal_generator.launch.py  launch_all.launch.py  launch_all_ekf.launch.py  launch_all_human_avoidance.launch.py  launch_all_odom_only.launch.py  launch_all_simulation.launch.py  launch_all_slam.launch.py  launch_all_slam_sim.launch.py  launch_all_vicon.launch.py  nav2_stack.launch.py  nav2_stack_human_avoidance.launch.py  nav2_stack_odom_only.launch.py  nav2_stack_simulation.launch.py  nav2_stack_slam.launch.py  nav2_stack_vicon.launch.py  plane_detector.launch.py  setup_localization.launch.py  setup_localization_vicon.launch.py  setup_robot.launch.py  setup_robot_simulation.launch.py  setup_robot_vicon.launch.py  slam_online_async.launch.py  slam_setup_launch.launch.py  stop_action_node.launch.py
launch/amcl/: amcl.launch.py  empty_map_server.launch.py  map_server.launch.py  map_server_vicon.launch.py
launch/ekf/: setup_robot_ekf.launch.py
launch/imu/: imu_complementary_filter.launch.py  imu_madgwick_filter.launch.py
launch/odom_only/: localization_odom_only.launch.py  setup_robot_odom_only.launch.py
launch/setup_robot/: chest_projection.launch.py  odom.launch.py  path_converter.launch.py  phase_detector.launch.py  pointcloud_filter.launch.py  robot_state_publisher.launch.py  robot_state_publisher_simulation.launch.py  scan_filtering_compensated.launch.py  virtual_unicycle_publisher.launch.py
launch/simulation/: ergoCub_rviz_sim.launch.py  launch_all_odom_only_sim.launch.py  launch_sim.launch.py  launch_sim_human_avoidance.launch.py  localization_odom_only_sim.launch.py  nav2_stack_sim.launch.py  nav2_stack_sim_human_avoidance.launch.py  setup_localization_sim.launch.py  setup_robot_odom_only_sim.launch.py  setup_robot_sim.launch.py
launch/slam/: nav2_stack_slam.launch.py  nav2_stack_slam_sim.launch.py  setup_robot_slam.launch.py  setup_robot_slam_sim.launch.py  slam_online_async.launch.py
scripts/: listener2Csv.py  place_and_move_object_sim.py  plotEcubData.py
src/: BaseProjector.cpp  GoalGenerator.cpp  LocalHumanAvoidance.cpp  MotorControl.cpp  OdomNode.cpp  PathConverter.cpp  PathConverter_v2.cpp  PhaseDetector.cpp  PointcloudFilter.cpp  ScanFilter.cpp  chest_projection.cpp  interpolation_walking_controller_talker.cpp  planner_trigger_server.cpp  scan_filtering_ros2_compensated.cpp  virtual_unicycle_publisher.cpp
src/FootstepsViewer/: FootstepsViewerRos.cpp  FootstepsViewerYarp.cpp  main.cpp
src/HumanPoseGoalGenerator/: CommunicationWrapper.cpp  GoalGenerator.cpp  HumanPoseGoalGenerator.cpp  NodeRos.cpp  main.cpp
src/PlaneDetector/: PlaneDetector.cpp
src/StopActionNode/: CommunicationWrapper.cpp  StopActionNode.cpp  main.cpp
src/ThetaStarOriented/: CMakeLists.txt  package.xml  theta_star_planner.xml
src/odom/: odom_node.cpp
src/old/: chest_projection.cpp  footsteps_viewer.cpp  interpolation_walking_controller_talker.cpp  virtual_unicycle_publisher.cpp
srv/: GetHumanExtremes.srv
(+52 files in other folders)
